--- a/02-android/MiAplicacion/app/src/main/res/layout/content_main.xml
+++ b/02-android/MiAplicacion/app/src/main/res/layout/content_main.xml
@@ -16,6 +16,16 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" android:text="@string/hola_mundo"
-            android:textColor="@color/colorHolaMundo"/>
+            android:textColor="@color/colorHolaMundo" android:id="@+id/textView"/>
+    <Button
+            android:text="Actividad 2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_actividad_dos"
+            app:layout_constraintEnd_toEndOf="@+id/textView"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="@+id/textView"
+            app:layout_constraintHorizontal_bias="0.266"
+            android:layout_marginBottom="52dp" app:layout_constraintBottom_toTopOf="@+id/textView"/>
 
 </android.support.constraint.ConstraintLayout>
