--- a/02-android/MiAplicacion/app/src/main/res/layout/content_main.xml
+++ b/02-android/MiAplicacion/app/src/main/res/layout/content_main.xml
@@ -27,5 +27,14 @@
             app:layout_constraintStart_toStartOf="@+id/textView"
             app:layout_constraintHorizontal_bias="0.266"
             android:layout_marginBottom="52dp" app:layout_constraintBottom_toTopOf="@+id/textView"/>
+    <Button
+            android:text="Parcelable"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_parcelable" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="@+id/textView"
+            app:layout_constraintStart_toStartOf="@+id/textView" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.517"
+            app:layout_constraintVertical_bias="0.193"/>
 
 </android.support.constraint.ConstraintLayout>
