--- a/02-android/MiAplicacion/app/src/main/res/layout/content_main.xml
+++ b/02-android/MiAplicacion/app/src/main/res/layout/content_main.xml
@@ -36,5 +36,24 @@
             app:layout_constraintStart_toStartOf="@+id/textView" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.517"
             app:layout_constraintVertical_bias="0.193"/>
+    <Button
+            android:text="Toast"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_toast" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/btn_parcelable" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"/>
+    <Button
+            android:text="ADAPTER"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_adapter" app:layout_constraintStart_toEndOf="@+id/btn_parcelable"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintTop_toTopOf="@+id/btn_parcelable"
+            app:layout_constraintBottom_toBottomOf="@+id/btn_parcelable"/>
 
 </android.support.constraint.ConstraintLayout>
