--- a/02-android/MiAplicacion/app/src/main/res/layout/content_main.xml
+++ b/02-android/MiAplicacion/app/src/main/res/layout/content_main.xml
@@ -55,5 +55,15 @@
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
             app:layout_constraintTop_toTopOf="@+id/btn_parcelable"
             app:layout_constraintBottom_toBottomOf="@+id/btn_parcelable"/>
+    <Button
+            android:text="Recycler"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_recycler" app:layout_constraintEnd_toStartOf="@+id/btn_parcelable"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.604" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.651"/>
 
 </android.support.constraint.ConstraintLayout>
