--- a/02-android/MiAplicacion/app/src/main/res/layout/activity_recicler_view.xml
+++ b/02-android/MiAplicacion/app/src/main/res/layout/activity_recicler_view.xml
@@ -8,10 +8,10 @@
         tools:context=".ReciclerViewActivity">
 
     <TextView
-            android:text="TextView"
+            android:text="AQUI VA MI LISTA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView2" android:layout_marginTop="80dp"
+            android:id="@+id/txt_titulo_rv" android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
@@ -22,7 +22,7 @@
             android:id="@+id/rv_personas" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginBottom="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/txt_titulo_rv" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintVertical_bias="0.944"/>
 </android.support.constraint.ConstraintLayout>
