--- a/Contactos/app/src/main/res/layout/activity_mensaje.xml
+++ b/Contactos/app/src/main/res/layout/activity_mensaje.xml
@@ -7,35 +7,25 @@
         android:layout_height="match_parent"
         tools:context=".MensajeActivity">
 
-    <EditText
-            android:layout_width="316dp"
-            android:layout_height="96dp"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/editText" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.615"
-            app:layout_constraintVertical_bias="0.339" android:hint="Mensaje"/>
     <TextView
             android:text="MENSAJE"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView2" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/editText" android:layout_marginTop="8dp"
+            android:id="@+id/textView2"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.122"
-            app:layout_constraintVertical_bias="0.463" android:textSize="18sp"/>
+            android:textSize="30sp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_enviar"/>
     <Button
             android:text="Enviar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/btn_enviar" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText" android:layout_marginBottom="8dp"
+            android:id="@+id/btn_enviar"
+            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.373"/>
+            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.371"/>
 </android.support.constraint.ConstraintLayout>
