--- a/02-android/MiAplicacion/app/src/main/res/layout/content_main.xml
+++ b/02-android/MiAplicacion/app/src/main/res/layout/content_main.xml
@@ -74,5 +74,15 @@
             app:layout_constraintBottom_toTopOf="@+id/btn_actividad_dos" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintVertical_bias="0.664"/>
+    <Button
+            android:text="Connexion HTTP"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_conexion" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_intent_respuesta" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"/>
 
 </android.support.constraint.ConstraintLayout>
