--- a/02-android/MiAplicacion/app/src/main/res/layout/content_main.xml
+++ b/02-android/MiAplicacion/app/src/main/res/layout/content_main.xml
@@ -45,7 +45,8 @@
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.488"
+            app:layout_constraintVertical_bias="0.248"/>
     <Button
             android:text="ADAPTER"
             android:layout_width="wrap_content"
@@ -81,6 +82,16 @@
             android:id="@+id/btn_conexion" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/btn_intent_respuesta" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"/>
+    <Button
+            android:text="Mapas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_mapa" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/btn_toast" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"/>
