--- a/02-android/MiAplicacion/app/src/main/res/layout/activity_recicler_view.xml
+++ b/02-android/MiAplicacion/app/src/main/res/layout/activity_recicler_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -16,7 +16,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp" tools:text="AQUI VA MI LISTA"/>
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
             android:layout_width="395dp"
             android:layout_height="544dp"
             android:id="@+id/rv_personas" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
@@ -25,4 +25,4 @@
             app:layout_constraintTop_toBottomOf="@+id/txt_titulo_rv" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintVertical_bias="0.944"/>
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
