--- a/02-android/MiAplicacion/app/src/main/res/layout/content_main.xml
+++ b/02-android/MiAplicacion/app/src/main/res/layout/content_main.xml
@@ -25,8 +25,8 @@
             app:layout_constraintEnd_toEndOf="@+id/textView"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
             app:layout_constraintStart_toStartOf="@+id/textView"
-            app:layout_constraintHorizontal_bias="0.266"
-            android:layout_marginBottom="52dp" app:layout_constraintBottom_toTopOf="@+id/textView"/>
+            app:layout_constraintHorizontal_bias="0.352"
+            android:layout_marginBottom="12dp" app:layout_constraintBottom_toTopOf="@+id/textView"/>
     <Button
             android:text="Parcelable"
             android:layout_width="wrap_content"
@@ -74,7 +74,8 @@
             app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/btn_actividad_dos" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintVertical_bias="0.664"/>
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintVertical_bias="0.294"
+            app:layout_constraintHorizontal_bias="0.487"/>
     <Button
             android:text="Connexion HTTP"
             android:layout_width="wrap_content"
@@ -84,7 +85,8 @@
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintVertical_bias="0.115"/>
     <Button
             android:text="Mapas"
             android:layout_width="wrap_content"
@@ -92,6 +94,27 @@
             android:id="@+id/btn_mapa" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/btn_toast" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"/>
+    <Button
+            android:text="Ciclo de Vida"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_ciclo_vida" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/btn_intent_respuesta" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_actividad_dos" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.481"
+            app:layout_constraintVertical_bias="0.018"/>
+    <Button
+            android:text="Fragmentos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_ir_fragmentos" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/btn_ciclo_vida" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_actividad_dos" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"/>
