--- a/02-android/MiAplicacion/app/src/main/res/layout/fragment_primer.xml
+++ b/02-android/MiAplicacion/app/src/main/res/layout/fragment_primer.xml
@@ -9,6 +9,7 @@
     <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="primero" android:id="@+id/txv_primero"/>
+            android:text="primero" android:id="@+id/txv_primero"
+            android:textAlignment="center"/>
 
 </FrameLayout>
