--- a/02-android/MiAplicacion/app/src/main/res/layout/fragment_segundo.xml
+++ b/02-android/MiAplicacion/app/src/main/res/layout/fragment_segundo.xml
@@ -9,6 +9,7 @@
     <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="segundo" android:id="@+id/txv_segundo"/>
+            android:text="segundo" android:id="@+id/txv_segundo"
+            android:textAlignment="center"/>
 
 </FrameLayout>
