--- a/02-android/MiAplicacion/app/src/main/res/layout/fragment_tercer.xml
+++ b/02-android/MiAplicacion/app/src/main/res/layout/fragment_tercer.xml
@@ -9,6 +9,7 @@
     <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="tercero" android:id="@+id/txv_tercero"/>
+            android:text="tercero" android:id="@+id/txv_tercero"
+            android:textAlignment="center"/>
 
 </FrameLayout>
